--- a/.github/workflows/label.yaml
+++ b/.github/workflows/label.yaml
@@ -6,57 +6,44 @@ on:
       - labeled
       - closed
 
-permissions:
-  contents: read
-
 jobs:
   prepare_branch_list:
     runs-on: ubuntu-latest
     if: |
       github.event.pull_request.merged == true &&
       github.event.pull_request.merge_commit_sha != null
-    permissions:
-      pull-requests: write
     outputs:
       target_branch: ${{ steps.set-branches.outputs.target_branch }}
     steps:
-      # TODO: Set up .github/labeler.yml
-      - name: Auto-label PR
-        uses: actions/labeler@v5
-        if: github.event.pull_request.merged == true && github.base_ref == 'main'
-        with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          configuration-path: .github/labeler.yaml
+    - name: Set Branches
+      id: set-branches
+      env:
+        PR_LABELS: ${{ toJson(github.event.pull_request.labels) }}
+        EVENT_ACTION: ${{ github.event.action }}
+        LABEL_NAME: ${{ github.event.label.name }}
+        BASE_REF: ${{ github.base_ref }}
+      run: |
+        if [[ $EVENT_ACTION == 'closed' ]]; then
+          # Get a list of the labels from the PR.
+          labels=$(echo "$PR_LABELS" | jq -r '.[].name')
+        else
+          # Or get the label that was added on the merged PR.
+          labels=$LABEL_NAME
+        fi
 
-      - name: Set Branches
-        id: set-branches
-        env:
-          PR_LABELS: ${{ toJson(github.event.pull_request.labels) }}
-          EVENT_ACTION: ${{ github.event.action }}
-          LABEL_NAME: ${{ github.event.label.name }}
-          BASE_REF: ${{ github.base_ref }}
-        run: |
-          if [[ $EVENT_ACTION == 'closed' ]]; then
-            # Get a list of the labels from the PR.
-            labels=$(echo "$PR_LABELS" | jq -r '.[].name')
-          else
-            # Or get the label that was added on the merged PR.
-            labels=$LABEL_NAME
+        # This list must contain all cherry-pick destinations as file is used for all branches.
+        branches=("main" "26.eap" "26.android" "25.lts.1+" "24.lts.1+" "23.lts.1+" "22.lts.1+" "21.lts.1+" "20.lts.1+" "19.lts.1+" "rc_11" "COBALT_9")
+        filtered_branches=()
+        for branch in "${branches[@]}"; do
+          if [[ $branch == $BASE_REF ]]; then
+            continue
           fi
+          if [[ ${labels[@]} =~ "cp-$branch" ]]; then
+            filtered_branches+=("$branch")
+          fi
+        done
 
-          # This list must contain all cherry-pick destinations as file is used for all branches.
-          branches=("main" "27.lts.1+" "26.eap" "26.android" "25.lts.1+" "24.lts.1+" "23.lts.1+" "22.lts.1+" "21.lts.1+" "20.lts.1+" "19.lts.1+" "rc_11" "COBALT_9")
-          filtered_branches=()
-          for branch in "${branches[@]}"; do
-            if [[ $branch == $BASE_REF ]]; then
-              continue
-            fi
-            if [[ ${labels[@]} =~ "cp-$branch" ]]; then
-              filtered_branches+=("$branch")
-            fi
-          done
-
-          echo "target_branch=$(echo -n "${filtered_branches[@]}" | jq -cRs 'split(" ")')" >> $GITHUB_OUTPUT
+        echo "target_branch=$(echo -n "${filtered_branches[@]}" | jq -cRs 'split(" ")')" >> $GITHUB_OUTPUT
 
   cherry_pick:
     runs-on: ubuntu-latest
@@ -91,9 +78,12 @@ jobs:
       - name: Cherry pick merge commit
         id: cherry-pick
         continue-on-error: true
+        env:
+          TARGET_BRANCH: ${{ matrix.target_branch }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_ACTIONS_API_KEY }}
         run: |
           set -x
-          git fetch origin ${{ matrix.target_branch }}
+          git fetch origin ${TARGET_BRANCH}
 
           set +e
           # Select the first parent as the mainline tree. This is necessary if
@@ -102,10 +92,18 @@ jobs:
           RES=$?
           set -e
           if [ ${RES} -ne 0 ]; then
-            # If the cherry pick failed due to a merge conflict we can
-            # add the conflicting file and create the commit anyway.
-            git add .
-            git cherry-pick --continue
+            # If the cherry pick failed due to a merge conflict we can try to resolve it using Gemini.
+            python3 .github/scripts/gemini_resolve_conflicts.py
+
+            # Check if all conflicts are resolved
+            if [ -z "$(git diff --name-only --diff-filter=U)" ]; then
+              git cherry-pick --continue --no-edit
+              RES=0
+            else
+              # Still have conflicts, add them and continue as before (draft PR)
+              git add .
+              git cherry-pick --continue --no-edit
+            fi
           fi
           exit ${RES}
 
